repair method findWaterContainerMaxCapacity, change getMaxCapacity to getWaterLevel